environments/prod/env/base/prod-environment.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/globex-retail/gitops.git?ref=HEAD
  creationTimestamp: null
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: prod
spec: {}
status: {}
