environments/prod/env/base/100-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"inventory"}]
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: app-catalog
    app.openshift.io/runtime: spring
  name: catalog
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog
      app.kubernetes.io/part-of: app-catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: catalog
        app.kubernetes.io/part-of: app-catalog
    spec:
      containers:
      - image:  "quay.io/globex/catalog:main-0d8454fc65faf75b32f5686b6cb279b497c08fda"
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
