environments/prod/env/base/100-catdbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: catalog-database
    app.openshift.io/runtime: postgresql
    app.kubernetes.io/part-of: app-catalog
  name: catalog-database
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog-database
      app.kubernetes.io/part-of: app-catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: catalog-database
        app.kubernetes.io/part-of: app-catalog
        name: catalog-database
    spec:
      containers:
      - image: registry.redhat.io/rhel8/postgresql-10@sha256:37636047d8fd31e1b9d941fb303ebf73703a03e918373463a46e4ce2b77c79f3
        imagePullPolicy: IfNotPresent
        name: catalog-database
        ports:
          - containerPort: 5432
            protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
