environments/prod/env/base/100-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: app-gateway
  name: gateway
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
      app.kubernetes.io/part-of: app-gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: gateway
        app.kubernetes.io/part-of: app-gateway
    spec:
      containers:
      - image: quay.io/globex/gateway:main-69b445ec68b059cf2548226194c9b7efe4aa65f2
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
