environments/prod/env/base/100-invdbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: inventory-database
    app.openshift.io/runtime: postgresql
    app.kubernetes.io/part-of: app-inventory
  name: postgresql
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory-database
      app.kubernetes.io/part-of: app-inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: inventory-database
        app.kubernetes.io/part-of: app-inventory
        name: inventory-database
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:10-el8
        imagePullPolicy: IfNotPresent
        name: postgresql
        ports:
          - containerPort: 5432
            protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
