environments/prod/env/base/100-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: app-inventory
  name: inventory
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
      app.kubernetes.io/part-of: app-inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/part-of: app-inventory
    spec:
      containers:
      - image:         "quay.io/globex/inventory:main-427838e9ec70a49c3900d8be068a1929c7c0ac0a"
        imagePullPolicy: Always
        name: inventory
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
