environments/prod/env/base/200-catdbservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: catalog-database
    app.kubernetes.io/part-of: app-catalog
  name: catalog-database
  namespace: prod
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: catalog-database
status:
  loadBalancer: {}
