environments/prod/env/base/200-invdbservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: inventory-database
    app.kubernetes.io/part-of: app-inventory
  name: inventory-database
  namespace: prod
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: inventory-database
status:
  loadBalancer: {}
