environments/prod/env/base/200-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: app-inventory
  name: inventory
  namespace: prod
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: app-inventory
status:
  loadBalancer: {}
