environments/prod/env/base/300-catroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog
  namespace: prod
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: catalog
    weight: 100
  wildcardPolicy: None
