environments/prod/env/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: www
  namespace: prod
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
